--- a/src/app/equipment.component.html
+++ b/src/app/equipment.component.html
@@ -1,3 +1,3 @@
-<p>{{branch.name}} {{branch.image}}</p>
-<img src="/src/assets/category/booms.png" alt="">
+<rs-category-window *ngFor="let category of categories" [category] = "category">This</rs-category-window>
+
 
