changed pointers, added routerlink to header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<header>
-    <h2 class='head'>Rental Management System</h2>
-    <rs-drop-list class='drop-list'></rs-drop-list>
+<header >
     
+    <h2 class="head" routerLink="home"  >Rental Management System</h2>
+    <rs-drop-list class='drop-list'></rs-drop-list>
 </header>
 <div class='clearfix'></div>
 
