--- a/src/app/category-window/category-window.component.css
+++ b/src/app/category-window/category-window.component.css
@@ -13,6 +13,7 @@
     padding: 30px;
   }
   
+  
   /* HEADING */
   
   .heading {
@@ -61,6 +62,7 @@
   .card:hover {
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
     transform: scale(1.01);
+    cursor: pointer;
   }
   
   .card__link,
