--- a/src/app/drop-list.component.css
+++ b/src/app/drop-list.component.css
@@ -75,7 +75,7 @@ ul li a {
   color: rgb(255, 255, 255);
 }
 
-ul li a:hover { background: #2c3e50; }
+ul li a:hover { background: #2c3e50; cursor: pointer; }
 
 li:hover > ul {
   display: block;
@@ -143,3 +143,4 @@ div div a:hover > div{
   display: inline-block;
   justify-content: center;
 } */
+
