--- a/src/app/sub-component/sub-component.component.css
+++ b/src/app/sub-component/sub-component.component.css
@@ -61,6 +61,7 @@
   .card:hover {
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
     transform: scale(1.01);
+    cursor: pointer;
   }
   
   .card__link,
