state functionality implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <header >
-    
     <h2 class="head" routerLink="home"  >Rental Management System</h2>
-    <rs-drop-list class='drop-list'></rs-drop-list>
+    <rs-navigation class='drop-list'></rs-navigation>
 </header>
 <div class='clearfix'></div>
 
