--- a/src/app/all-categories/all-categories.component.css
+++ b/src/app/all-categories/all-categories.component.css
@@ -10,7 +10,8 @@
   }
   
   .main-container {
-    padding: 30px;
+    padding: 10px;
+    
   }
   
   
@@ -43,8 +44,9 @@
   
   .cards {
     display: flex;
+    /* grid-template-columns: 1fr 1fr 1fr; */
     flex-wrap: wrap;
-    /* justify-content: space-between; */
+    justify-content: space-around;
   }
   
   .card {
