--- a/src/app/all-subcategories/all-subcategories.component.html
+++ b/src/app/all-subcategories/all-subcategories.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <div class="cards">
-      <div class="card card-1" *ngFor="let subcategory of subcategories">
+      <div class="card card-1" *ngFor="let subcategory of allSubcategories">
         <h2 class="card__title">{{subcategory.name}}</h2>
         <img src="assets/category/subcategory/{{subcategory.image}}"  style="width:50%"  >
       </div>
